Begun working on Pendulum control with NAF. Updated Keras-RL to include latest repo from github

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ ipykernel = "*"
 gym = "*"
 tensorflow = "*"
 matplotlib = "*"
-keras-rl = "*"
+keras-rl = {git = "git://github.com/keras-rl/keras-rl.git"}
 h5py = "*"
 
 [requires]
