--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ tensorflow = "*"
 matplotlib = "*"
 keras-rl = {git = "git://github.com/keras-rl/keras-rl.git"}
 h5py = "*"
+mujoco-py = ">=1.50.1,<1.50.2"
 
 [requires]
 python_version = "3.6.6"
